Fixed the issue where tables were looking hideous on small screens. The fix was setting a prop called 'responsive'.
Updated the mui-datatables library to 2.0.0 (official release, no longer beta) since it didn't look like it broke anything. All breaking changes on their site were related to things I wasn't using anyway.

--- a/src/admin/story-view/view/containers/SequenceTabContainer.module.scss
+++ b/src/admin/story-view/view/containers/SequenceTabContainer.module.scss
@@ -1,16 +1,33 @@
+@import "../../../../variables.scss";
+
 .tablesContainer {
   display: flex;
-  flex-direction: row;
-  align-items: flex-start;
 
   .chaptersList {
     flex: 1 1;
     margin-top: 24px;
-    margin-right: 10px;
-    overflow: hidden;
+    overflow: auto;
   }
 
   .sequencesTable {
     flex: 3 3;
+    overflow: hidden;
+
+    & > div {
+      height: 100%;
+    }
+  }
+
+  @media screen and (max-width:1070px) {
+    flex-direction: column;
+  }
+
+  @media screen and (min-width:1071px) {
+    flex-direction: row;
+    align-items: flex-start;
+
+    .chaptersList {
+      margin-right: 10px;
+    }
   }
 }
